@@ -1,5 +1,11 @@
 2005-03-09  Richard Sandiford  <rsandifo@redhat.com>
 
+	* config/tc-mips.c (mips_cl_insn): Replace reloc_type array with
+	a single mips16_absolute_jump_p bit.
+	(append_insn): Adjust accordingly.
+
+2005-03-09  Richard Sandiford  <rsandifo@redhat.com>
+
 	* config/tc-mips.h (mips_cl_insn): Move definition to...
 	* config/tc-mips.c (mips_cl_insn): ...here.  Add new fields:
 	frag, where, fixp, reloc_type, valid_p, noreorder_p, delay_slot_p
